--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.3",
-    "react-native-navigation": "^1.1.457"
+    "react-native-navigation": "^1.1.457",
+    "react-native-svg": "^6.3.1",
+    "react-native-svg-charts": "^5.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
