--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "react": "16.3.1",
     "react-native": "0.55.3",
     "react-native-navigation": "^1.1.457",
+    "react-native-qrcode": "^0.2.6",
     "react-native-svg": "^6.3.1",
-    "react-native-svg-charts": "^5.2.0"
+    "react-native-svg-charts": "^5.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
