--- a/ios/digitalhospital/Info.plist
+++ b/ios/digitalhospital/Info.plist
@@ -49,5 +49,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+  <key>NSFaceIDUsageDescription</key>
+  <string>Enabling Face ID allows you quick and secure access to your account.</string>
 </dict>
 </plist>
