--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-qrcode": "^0.2.6",
     "react-native-svg": "^6.3.1",
     "react-native-svg-charts": "^5.2.0",
+    "react-native-touch-id": "^4.0.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
