--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native-svg-charts": "^5.2.0",
     "react-native-touch-id": "^4.0.2",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-api-middleware": "^2.3.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
