--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.3.1",
     "react-native": "0.55.3",
     "react-native-navigation": "^1.1.457",
+    "react-native-page-control": "^1.1.1",
     "react-native-qrcode": "^0.2.6",
     "react-native-svg": "^6.3.1",
     "react-native-svg-charts": "^5.2.0",
