--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.3",
+    "react-native-google-maps-directions": "^2.0.0",
     "react-native-navigation": "^1.1.457",
     "react-native-page-control": "^1.1.1",
+    "react-native-phone-call": "^1.0.7",
     "react-native-qrcode": "^0.2.6",
     "react-native-svg": "^6.3.1",
     "react-native-svg-charts": "^5.2.0",
